tests/typecheck/bad/fun4.scilla
fun (x : Int32) =>
fun (f : 'A -> Int32) =>
fun (z : 'A) =>
  f z
